[package]
name = "vertex"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
authors = ["Dessera <email@1533653159@qq.com>"]
description = "Aim to be a wrapper of vivado"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
